# llava-mnist

./: README.md  pyproject.toml
src/llava_mnist/: __init__.py  configuration_mlp.py  evaluate_llama.py  evaluate_llama_variant.py  evaluate_llava.py  example.py  modeling_mlp.py  train_llama.py  util.py
