[project]
name = "llava-mnist"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "tqdm>=4.66.5",
    "matplotlib>=3.7.5",
    "datasets>=2.20.0",
    "torchvision>=0.19.0",
    "accelerate>=0.33.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "llava_mnist:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llava_mnist"]
